[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/SummaryReport/listPlayers.gd" type="Script" id=1]
[ext_resource path="res://Fonts/SFWonderComic-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Quiz/medium.png" type="Texture" id=3]

[sub_resource type="StyleBoxTexture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 2074, 701 )

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = ExtResource( 2 )

[node name="Panel" type="Panel"]
margin_left = 26.0
margin_top = 90.0
margin_right = 1505.0
margin_bottom = 165.0
custom_styles/panel = SubResource( 7 )
script = ExtResource( 1 )

[node name="Index" type="Label" parent="."]
margin_left = 26.7368
margin_top = 7.8421
margin_right = 185.737
margin_bottom = 66.8421
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Index"
align = 1
valign = 1

[node name="StudentEmail" type="Label" parent="."]
margin_left = 569.504
margin_top = 16.204
margin_right = 820.504
margin_bottom = 59.204
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "StudentEmail"
align = 1
valign = 1

[node name="MasteryLvl" type="Label" parent="."]
margin_left = 1019.05
margin_top = 14.0975
margin_right = 1274.05
margin_bottom = 57.0975
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MasteryLvl"
align = 1
valign = 1

[node name="Example" type="Label" parent="."]
margin_left = 1302.0
margin_top = 16.0
margin_right = 1460.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quiz"
align = 1
valign = 1

[node name="StudentName" type="Button" parent="."]
margin_left = 209.062
margin_top = 15.883
margin_right = 452.062
margin_bottom = 58.883
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "StudentName"
clip_text = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="UID" type="Label" parent="."]
margin_left = 1882.0
margin_top = 45.0
margin_right = 2454.0
margin_bottom = 152.0
text = "UID"
[connection signal="pressed" from="StudentName" to="." method="_on_Class_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
